Add task's flows -> create, get, getAll and delete
