# internal/user/handler/error_handler.go
@@ -2,7 +2,6 @@ package handler
 
 import (
 	"github.com/altuntasfatih/task-manager/pkg/custom"
-	"github.com/altuntasfatih/task-manager/pkg/store"
 	"github.com/go-playground/validator/v10"
 	"github.com/gofiber/fiber/v2"
 )
@@ -13,9 +12,10 @@ func ErrorHandler(c *fiber.Ctx, err error) error {
 		return c.Status(fiber.StatusBadRequest).JSON(custom.ErrorResponse{Message: err.Error()})
 
 	}
-	if err == store.ErrUserNotFound {
-		return c.Status(fiber.StatusNotFound).JSON(custom.ErrorResponse{Message: err.Error()})
 
+	if err == custom.ErrUserNotFound || err == custom.ErrTaskNotFound {
+		return c.Status(fiber.StatusNotFound).JSON(custom.ErrorResponse{Message: err.Error()})
 	}
+
 	return c.Status(fiber.StatusInternalServerError).JSON(custom.ErrorResponse{Message: err.Error()})
 }
