# pkg/models/response_models.go
@@ -6,3 +6,10 @@ type GetUsersResponse struct {
 type GetUserResponse struct {
 	*User
 }
+
+type GetTasksResponse struct {
+	Tasks []*Task
+}
+type GetTaskResponse struct {
+	*Task
+}
